<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"/>

    <TextView
        android:id="@+id/tvDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Director"/>

    <TextView
        android:id="@+id/tvClasificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clasificacion"/>

</LinearLayout>